[gd_scene load_steps=16 format=3 uid="uid://ct38g30tv2t1u"]

[ext_resource type="Script" path="res://Scripts/GameConfigHandler.gd" id="1_f1c2j"]
[ext_resource type="LabelSettings" uid="uid://co35nvxgodayu" path="res://Themes/normal_label_settings_72.tres" id="1_f34co"]
[ext_resource type="Script" path="res://Scripts/TranslateHandler.gd" id="2_b00to"]
[ext_resource type="Texture2D" uid="uid://bfrb3k4q4f7oe" path="res://Sprites/BoardSprite.png" id="3_dxsgj"]
[ext_resource type="Texture2D" uid="uid://de5hbn63oj7yb" path="res://Sprites/RoundRectTint.png" id="4_cuok8"]
[ext_resource type="Texture2D" uid="uid://bnf5p3wv4pfjv" path="res://Sprites/RoundedRect.png" id="5_u8h07"]
[ext_resource type="PackedScene" uid="uid://shb3hdkaf3pd" path="res://Prefabs/piece_yellow_rim.tscn" id="6_3upnx"]
[ext_resource type="PackedScene" uid="uid://dti6ar2y5junv" path="res://Prefabs/piece_green_rim.tscn" id="7_nsjgf"]
[ext_resource type="PackedScene" uid="uid://duh4e3ydgg73q" path="res://Prefabs/piece_blue_rim.tscn" id="8_8wybk"]
[ext_resource type="PackedScene" uid="uid://bfvxkclo32l6v" path="res://Prefabs/piece_red_rim.tscn" id="9_mqibc"]
[ext_resource type="Theme" uid="uid://cdmflckw8cw2g" path="res://Themes/arrow_prev_texture_button_theme.tres" id="10_ktydp"]
[ext_resource type="LabelSettings" uid="uid://bfbbq8a8kcpdj" path="res://Themes/normal_label_settings_64.tres" id="11_flpt2"]
[ext_resource type="Theme" uid="uid://bpa2h0wbmuby5" path="res://Themes/arrow_next_texture_button_theme.tres" id="12_1dafl"]
[ext_resource type="PackedScene" uid="uid://bilova07og8dh" path="res://Prefabs/long_button.tscn" id="13_cagkt"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_k2v7u"]
load_path = "res://.godot/imported/RoundedRect.png-28cf6cd960d15f571c468f823ccb77bd.ctex"

[node name="ConfigControl" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -480.0
offset_right = 480.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1c2j")

[node name="SelectTitleLabelControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -460.0
offset_bottom = -460.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectTitleLabel" type="Label" parent="SelectTitleLabelControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.5
offset_top = -45.5
offset_right = 282.5
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(282, 56)
text = "SELECT COLOR"
label_settings = ExtResource("1_f34co")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_b00to")
translate_keys = Array[String](["T_SELECT_PLAYERS"])
font_size_ratios = {
"FR": 0.96
}

[node name="ElementControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoardWork" type="TextureRect" parent="ElementControl"]
modulate = Color(0.631373, 0.631373, 0.631373, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -290.0
offset_right = 290.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(290, 290)
texture = ExtResource("3_dxsgj")
expand_mode = 1

[node name="RoundedRectControl" type="Control" parent="ElementControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="RoundRectTint" type="NinePatchRect" parent="ElementControl/RoundedRectControl"]
modulate = Color(0.239216, 0.839216, 0.815686, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 300)
texture = ExtResource("4_cuok8")

[node name="RoundRect" type="NinePatchRect" parent="ElementControl/RoundedRectControl"]
self_modulate = Color(0.807843, 0.807843, 0.807843, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_k2v7u")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="YellowControl" type="Control" parent="ElementControl/RoundedRectControl/RoundRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -130.0
offset_right = -130.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectionRect" type="NinePatchRect" parent="ElementControl/RoundedRectControl/RoundRect/YellowControl"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(90, 90)
texture = ExtResource("5_u8h07")

[node name="PieceParent" parent="ElementControl/RoundedRectControl/RoundRect/YellowControl" instance=ExtResource("6_3upnx")]
layout_mode = 1
scale = Vector2(3.4, 3.4)

[node name="GreenControl" type="Control" parent="ElementControl/RoundedRectControl/RoundRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 130.0
offset_top = -130.0
offset_right = 130.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectionRect" type="NinePatchRect" parent="ElementControl/RoundedRectControl/RoundRect/GreenControl"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(90, 90)
texture = ExtResource("5_u8h07")

[node name="PieceParent" parent="ElementControl/RoundedRectControl/RoundRect/GreenControl" instance=ExtResource("7_nsjgf")]
layout_mode = 1
scale = Vector2(3.4, 3.4)

[node name="BlueControl" type="Control" parent="ElementControl/RoundedRectControl/RoundRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = 130.0
offset_right = -130.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectionRect" type="NinePatchRect" parent="ElementControl/RoundedRectControl/RoundRect/BlueControl"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -90.0001
offset_right = 90.0
offset_bottom = 89.9999
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(90, 90)
texture = ExtResource("5_u8h07")

[node name="PieceParent" parent="ElementControl/RoundedRectControl/RoundRect/BlueControl" instance=ExtResource("8_8wybk")]
layout_mode = 1
scale = Vector2(3.4, 3.4)

[node name="RedControl" type="Control" parent="ElementControl/RoundedRectControl/RoundRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 130.0
offset_top = 130.0
offset_right = 130.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectionRect" type="NinePatchRect" parent="ElementControl/RoundedRectControl/RoundRect/RedControl"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(90, 90)
texture = ExtResource("5_u8h07")

[node name="PieceParent" parent="ElementControl/RoundedRectControl/RoundRect/RedControl" instance=ExtResource("9_mqibc")]
layout_mode = 1
scale = Vector2(3.4, 3.4)

[node name="NumberPlayersLabelControl" type="Control" parent="ElementControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 330.0
offset_right = 300.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(310, 60)

[node name="ArrowLeftButton" type="Button" parent="ElementControl/NumberPlayersLabelControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -55.0
offset_right = 110.0
offset_bottom = 55.0
grow_vertical = 2
pivot_offset = Vector2(60, 60)
size_flags_horizontal = 3
theme = ExtResource("10_ktydp")

[node name="NumberPlayersLabel" type="Label" parent="ElementControl/NumberPlayersLabelControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -47.5
offset_right = 175.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(175, 47.5)
text = "4 PLAYERS"
label_settings = ExtResource("11_flpt2")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_b00to")
translate_keys = Array[String](["T_4_PLAYERS"])
bind_list = Array[String]([" "])
font_size_ratios = {
"JP": 0.94,
"PT": 0.98
}

[node name="ArrowRightButton" type="Button" parent="ElementControl/NumberPlayersLabelControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -55.0
offset_bottom = 55.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(60, 60)
size_flags_horizontal = 3
theme = ExtResource("12_1dafl")

[node name="PlayButtonControl" type="Control" parent="ElementControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 540.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" parent="ElementControl/PlayButtonControl" instance=ExtResource("13_cagkt")]
layout_mode = 1
offset_left = -200.0
offset_top = -55.0
offset_right = 200.0
offset_bottom = 55.0
pivot_offset = Vector2(200, 55)

[node name="Label" parent="ElementControl/PlayButtonControl/Button" index="0"]
text = "Play"
translate_keys = Array[String](["T_PLAY"])

[editable path="ElementControl/PlayButtonControl/Button"]
